--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@replit/vite-plugin-shadcn-theme-json": "^0.0.4",
     "@supabase/supabase-js": "^2.47.10",
     "@tanstack/react-query": "^5.62.8",
+    "@tinymce/tinymce-react": "^5.1.1",
     "@tiptap/extension-image": "^2.10.4",
     "@tiptap/extension-link": "^2.10.4",
     "@tiptap/extension-text-style": "^2.10.4",
