--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@tiptap/react": "^2.10.4",
     "@tiptap/starter-kit": "^2.10.4",
     "@types/multer": "^1.4.12",
+    "@types/quill": "^2.0.14",
     "@types/react-beautiful-dnd": "^13.1.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -75,6 +76,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
     "react-icons": "^5.4.0",
+    "react-quill": "^2.0.0",
     "react-resizable-panels": "^2.1.4",
     "recharts": "^2.13.0",
     "tailwind-merge": "^2.5.4",
